Implement pricing and accounting readiness pipeline